About Wrapped up with styling. Fix up Multimedia page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,14 @@ html {
 
 body {
   background: rgba(0, 0, 0, 0.5);
+  /* font-family: 'Oswald', sans-serif; */
+  font-family: 'Anton', sans-serif;
+  /* font-family: 'Bitter', serif; */
+  letter-spacing: 1px;
+}
+
+label {
+  color: white;
 }
 
 .navbar-inverse {
@@ -65,6 +73,7 @@ body {
   height: auto;
   margin: 0 auto;
   font-size: 1.5em;
+  font-family: 'Oswald', sans-serif;
 }
 
 /*  Carousel */
@@ -80,8 +89,27 @@ body {
   margin-top: 5em;
 }
 
+.blog-wrapper {
+  color: white;
+  width: 90%;
+  height: auto;
+  margin: 0 auto;
+}
+.wrapper {
+  white-space: pre-wrap;
+  color: white;
+}
 
+.auth-wrapper {
+  margin-top: 2.5em;
+  color: white;
+}
 
+.episodes-container {
+  margin-top: 3.5em;
+  color: orange;
+  text-align: center;
+}
 
 footer {
   width: 100%;
@@ -103,14 +131,26 @@ footer {
 .page-header {
   color: white;
 }
-
-.manager {
-  overflow-y: scroll;
+.btn {
+  letter-spacing: 1.5px;
+}
+.form-wrapper{
+  width: 60%;
+  margin: 0 auto;
   height: auto;
 }
-
+.form-control {
+  letter-spacing: 1.5px;
+}
+.manager {
+  height: auto;
+}
+.manager h2 {
+  color: orange;
+}
 .table {
   color: white;
+  font-family: 'Oswald', sans-serif;
 }
 tr {
   height: 2em;
